# fql

./: .clang-format  .gitignore  LICENSE  Makefile.am  Makefile.in  README.md  a.c  aclocal.m4  aurconfig.sh  benchmark.sh  config.h.in~  configure  configure.ac  debug.sql  find_antlr_cpath.sh  gencsv.sh  gentsv.sh  knownbugs.txt  mut.txt  out.txt  qclean.sh  run_a.c.sh  test.sql  usage.md
lib/: Makefile.am  Makefile.in  aggregate.c  aggregate.h  aggregatefn.c  column.c  column.h  control.c  control.h  expression.c  expression.h  field.c  field.h  fixedbyte.c  fixedread.c  fixedwrite.c  fql_functions.c  fqlbranch.c  fqlbranch.h  fqldeclare.c  fqldeclare.h  fqldelete.c  fqldelete.h  fqlfunctions.c  fqlhandle.h  fqlimits.h  fqllogic.c  fqlplan.c  fqlplan.h  fqlprocesses.c  fqlselect.c  fqlselect.h  fqlset.c  fqlset.h  fqlsig.c  fqlsig.h  fqlupdate.c  fqlupdate.h  function.c  function.h  (+50 more)
lib/antlr/: Makefile.am  Makefile.in  antlr.cpp  antlr.h  errorlistener.cpp  errorlistener.h  listenerinterface.cpp  listenerinterface.h  parseonly.cpp  parseonly.h  treewalker.cpp  treewalker.h  upperstream.cpp  upperstream.h
lib/antlr/grammar/: TSqlLexer.g4  TSqlLexer.interp  TSqlLexer.tokens  TSqlParser.g4  TSqlParser.interp  TSqlParser_FULL.g4  gen.sh  lex.txt  unlex.sh
lib/docs/: Doxyfile.in  Makefile.am  Makefile.in
lib/include/: fql.h  util.h
lib/schema/: noheader
lib/util/: Makefile.am  Makefile.in  dgraph.c  dgraph.h  dtree.c  dtree.h  fifo.c  fifo.h  fqlstring.c  fqlstring.h  hmap.c  hmap.h  pmap.c  pmap.h  queue.c  queue.h  stack.c  stack.h  stringview.c  stringview.h  util.c  util.h  vec.c  vec.h
libcsv/: Makefile.am  Makefile.in  charnode.c  charnode.h  csv.c  csverror.c  csverror.h  csvsignal.c  csvsignal.h  misc.c  misc.h  reader.c  safegetline.c  safegetline.h  writer.c
libcsv/docs/: Doxyfile.in  Makefile.am  Makefile.in
libcsv/include/: csv.h
libcsv/src/: Makefile.am  Makefile.in  stdcsv
src/: Makefile.am  Makefile.in  fql.c  stdcsv  stdcsv.c
tests/: B1.tsv  B2.csv  B3.psv  Makefile.am  Makefile.in  basic.csv  check_common.c  check_common.h  check_constants  check_constants.c  check_constants.h  check_controlflow  check_controlflow.c  check_difficult  check_difficult.c  check_failure  check_failure.c  check_for_leaks.sh  check_group.c  check_hashmap.c  check_having.c  check_hmap  check_hmap.c  check_join.c  check_libcsv  check_libcsv.c  check_libfql.c  check_logic  check_logic.c  check_null  check_null.c  check_operations.c  check_order  check_order.c  check_output.c  check_read  check_read.c  check_scalar.c  check_stdin.c  check_subquery  (+38 more)
tests/control/: const12  const14  const18  const19  const20  const3  const5  const6  const7  const9  difficult1  difficult2  difficult3  group4  group6  group7  group9  having4  having5  join1  join2  join3  join4  join5  operations1  operations11  operations12  operations5  operations6  operations7  order4  order5  order6  order7  read2  read4  read5  read6  read7  read8  (+36 more)
tests/sub/: sub.csv
util/: Makefile.am  Makefile.in  dgraph.c  dgraph.h  fifo.c  fifo.h  flex.c  flex.h  fqlstring.c  hashmap.c  hashmap.h  hmap.c  hmap.h  node.c  node.h  pmap.c  pmap.h  queue.c  queue.h  stack.c  stack.h  stringview.c  stringview.h  stringy.c  stringy.h  util.c  util.h  vec.c  vec.h
